[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/ui/caravan/caravan_interface_controller.gd" id="1_caravan_ctrl"]
[ext_resource type="Theme" uid="uid://cpdx7u62cktq6" path="res://assets/themes/ui_theme.tres" id="2_theme"]

[node name="CaravanInterface" type="CanvasLayer"]
layer = 10
script = ExtResource("1_caravan_ctrl")

[node name="DepotPanel" type="PanelContainer" parent="."]
theme = ExtResource("2_theme")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="MarginContainer" type="MarginContainer" parent="DepotPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="DepotPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="DepotPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HeaderLabel" type="Label" parent="DepotPanel/MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "CARAVAN DEPOT"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="DepotPanel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DepotCountLabel" type="Label" parent="DepotPanel/MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "ITEMS: 0"
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="DepotPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScreenContainer" type="Control" parent="DepotPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="InputBlocker" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.3)
